fixed some html, beer name now visible when hovering on beer icon

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/home.css">
-    <title>Beer App</title>
+    <title>Beer Necessities</title>
 </head>
 <body>
     <header>Beer Necessities
