--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/login.css">
-    <title>Beer App</title>
+    <link rel="stylesheet" href="css/login.css">
+    <title>Beer Necessities</title>
 </head>
 <body>
-    <header>Beer App
+    <header>Beer Necessities
         <nav>
             <a href="home.html">Enter As Guest</a>
         </nav>
     </header>
     <div id="login-form">
-        <span id="welcome1">Welcome to the Beer App</span>
+        <span id="welcome1">Look for the Beer Necessities</span>
+        <span id="slogan">"The Simple Beer Necessities"</span>
         <form>
             <input id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
@@ -23,7 +24,6 @@
     <div id="register-form">
         <span id="welcome2">Create a New Account Today!</span>
         <form>
-<!--            <input id="email" placeholder="Email Address">-->
             <input id="new-username" placeholder="Username">
             <input type="password" id="new-password" placeholder="Password">
             <input type="password" id="confirm-password" placeholder="Confirm Password">
