--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/profile.css">
-    <title>Beer App</title>
+    <link rel="stylesheet" href="css/profile.css">
+    <title>Beer Necessities</title>
 </head>
 <body>
-    <header>Beer App
+    <header>Beer Necessities
         <nav>
             <a href="home.html">Home</a>
             <a id="profile-nav" href="profile.html">Your Profile</a>
