can now see past orders in the profile page

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,11 +6,7 @@
     <title>Beer Necessities</title>
 </head>
 <body>
-    <header>Beer Necessities
-        <nav>
-            <a href="home.html">Enter As Guest</a>
-        </nav>
-    </header>
+    <header>Beer Necessities</header>
     <div id="login-form">
         <span id="welcome1">Look for the Beer Necessities</span>
         <span id="slogan">"The Simple Beer Necessities"</span>
