--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -14,7 +14,10 @@
             <a id="logout-nav">Log Out</a>
         </nav>
     </header>
+    <h1 id="profile-label">Your past orders:</h1>
+    <div id="top-wrapper">
+    </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./javascript/profile.js"></script>
+    <script src="javascript/profile.js"></script>
 </body>
 </html>
