added thank you message upon order completion

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -25,6 +25,11 @@
     </header>
     <div id="cards-wrapper">
     </div>
+    <div id="order-thank-you">
+        <h1>Thank you for your order!</h1>
+        <a id="top-text" href="profile.html">See your order on your profile</a>
+        <a id="bottom-text">Begin a new order</a>
+    </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="javascript/home.js"></script>
 </body>
